DEV: fixed about and privacy link not visible

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -18,7 +18,6 @@
   align-items: center;
   padding: 8px;
   width: 100%;
-  opacity: 80%;
 }
 
 .footer-item {
